# thesis

./: .gitignore  README.md  batch_runner.py  builder.py  download.py  main.py
conf/: config.yaml  dp_finetune.yaml
conf/algorithm/: dp_ftrl.yaml  dp_sgd.yaml
conf/builder/: default.yaml
conf/data_split/: dirichlet_moderate.yaml  iid.yaml  non_iid.yaml
conf/hydra/: hydra.yaml  submitit_enroot.yaml
conf/scripts/: builder.yaml  server.yaml
conf/server/: default.yaml
conf/task/: mortality.yaml  phenotyping.yaml  summarization.yaml
dpnlp_lib/: builder.py  download.py  pyproject.toml  tasks.py  tests.py  utils.py
dpnlp_lib/src/: __init__.py  builder.py  client.py  download.py  dp_ftrl.py  dp_sgd.py  partitioner.py  server.py  tasks.py  utils.py
experiments/: config.yaml
