[project]
name = "dpnlp-lib"
version = "0.1.0"
description = "Differential Privacy and Federated Learning using MIMIC-III"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Tanalp Agustoslu", email = "t.agustoslu@campus.lmu.de" }
]
dependencies = [
    "antlr4-python3-runtime==4.9.3",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "contourpy==1.3.2",
    "cryptography==44.0.3",
    "cycler==0.12.1",
    "exceptiongroup==1.3.0",
    "filelock==3.18.0",
    "flwr==1.19.0",
    "fonttools==4.58.0",
    "fsspec==2025.5.1",
    "grpcio==1.73.1",
    "hydra-core==1.3.2",
    "hydra-submitit-launcher==1.2.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "iterators==0.0.2",
    "Jinja2==3.1.6",
    "joblib==1.5.1",
    "kiwisolver==1.4.8",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.3",
    "mdurl==0.1.2",
    "memory-profiler==0.61.0",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.77",
    "nvidia-cuda-runtime-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-cufile-cu12==1.11.1.6",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.6.77",
    "omegaconf==2.3.0",
    "packaging==25.0",
    "pandas==2.2.3",
    "pathspec==0.12.1",
    "pillow==11.2.1",
    "pluggy==1.6.0",
    "protobuf==4.25.8",
    "psutil==7.0.0",
    "pyarrow==20.0.0",
    "pycparser==2.22",
    "pycryptodome==3.23.0",
    "Pygments==2.19.1",
    "pyinstrument==5.0.2",
    "pyparsing==3.2.3",
    "pytest==8.4.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "rich==13.9.4",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "submitit==1.5.3",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tomli==2.2.1",
    "tomli_w==1.2.0",
    "torch==2.7.0",
    "triton==3.3.0",
    "typer==0.12.5",
    "typing_extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0"
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dpnlp_lib"]